karnc/tests/fixtures/negative/61_context_directory_mixed_kinds/src/foo/b.karn
context foo {
  type B = Int
}
